# onrobot_grippers

./: .gitignore  README.md  onrobot_grippers.deps.yaml  pixi.toml  rockerc.yaml
onrobot_rg_control/: CMakeLists.txt
onrobot_rg_control/nodes/: OnRobotRGTcpNode.py
onrobot_rg_control/nodes/DualChanger/: OnRobotRGTcpDualNode.py
onrobot_rg_control/onrobot_rg_control/: baseOnRobotRG.py
onrobot_rg_description/: CMakeLists.txt
onrobot_rg_gazebo/: CMakeLists.txt
onrobot_rg_modbus_tcp/: CMakeLists.txt
onrobot_rg_msgs/: CMakeLists.txt
onrobot_vg_control/: CMakeLists.txt
onrobot_vg_control/launch/: bringup.launch.py  bringup_server.launch.py
onrobot_vg_control/nodes/: OnRobotVGSimpleController.py  OnRobotVGSimpleControllerServer.py  OnRobotVGStatusListener.py  OnRobotVGTcpNode.py
onrobot_vg_control/onrobot_vg_control/: baseOnRobotVG.py
onrobot_vg_description/: CMakeLists.txt  package.xml
onrobot_vg_modbus_tcp/: CMakeLists.txt  package.xml
onrobot_vg_modbus_tcp/onrobot_vg_modbus_tcp/: __init__.py  comModbusTcp.py
onrobot_vg_msgs/: CMakeLists.txt  package.xml
onrobot_vg_msgs/msg/: OnRobotVGInput.msg  OnRobotVGOutput.msg
rocker/ros-humble/: ros-humble.deps.yaml  sources.sh
